<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AppName">Pokedex</string>
    <string name="avatar">Pokemon Avatar</string>
    <string name="pok_name">Name</string>
    <string name="pok_type">Type</string>
    <string name="pok_ability">Ability</string>
    <string name="pok_id">ID</string>
    <string name="btn_back">BACK</string>
    <string name="btn_details">Details</string>
    <string name="enter">Enter</string>
    <string name="favorites">Favorites</string>
    <string name="pok_species">Species</string>
    <string name="pok_height">Height</string>
    <string name="pok_weight">Weight</string>
</resources>