<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15sp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="25sp"
    app:cardElevation="3sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokemon_card"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/design_default_color_surface">


        <TextView
            android:id="@+id/pokheight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_height"
            android:gravity="center|end"
            android:text="@string/pok_height"
            android:textColor="@color/red_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/pokability" />

        <TextView
            android:id="@+id/pokweight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_type"
            android:gravity="center|end"
            android:text="@string/pok_weight"
            android:textColor="@color/red_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/pokheight" />

        <TextView
            android:id="@+id/pokability"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_ability"
            android:gravity="center|end"
            android:text="@string/pok_ability"
            android:textColor="@color/red_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/poktype" />

        <TextView
            android:id="@+id/poktype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_type"
            android:gravity="center|end"
            android:text="@string/pok_type"
            android:textColor="@color/red_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/pokname" />

        <TextView
            android:id="@+id/pokspecies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_species"
            android:gravity="center|end"
            android:text="@string/pok_species"
            android:textColor="@color/red_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/pokweight" />

        <TextView
            android:id="@+id/pokid"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_id"
            android:gravity="center"
            android:text="@string/pok_id"
            android:textColor="@color/red_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/pokname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_name"
            android:gravity="center|end"
            android:text="@string/pok_name"
            android:textColor="@color/red_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/branco" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>