<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15sp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="25sp"
    app:cardElevation="3sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">


        <Button
            android:id="@+id/seePokemon"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:contentDescription="@string/btn_details"
            android:text="@string/btn_details"
            android:textColor="@color/blue_layout"
            android:textColorHint="@color/blue_layout"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/PokemonName"
            app:layout_constraintStart_toStartOf="@+id/PokemonName"
            app:layout_constraintTop_toBottomOf="@+id/PokemonName" />

        <TextView
            android:id="@+id/PokemonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pok_name"
            android:gravity="center"
            android:text="@string/pok_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.771"
            app:srcCompat="@drawable/branco" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>